<resources>
    <string name="app_name">twoyi</string>
    <string name="booting_tips">Booting twoyi…</string>
    <string name="extracting_tips">twoyi is initializing…</string>
    <string name="first_boot_tips">The first boot is a little slow, please wait…</string>
    <string name="first_boot_tips2">The initialization is normal, please be patient:)</string>
    <string name="first_boot_tips3">Initialization is about to complete, please wait…</string>
    <string name="boot_failed">Twoyi boot timeout!</string>
    <string name="about_btn">About</string>
    <string name="copy_right" translatable="false">Copyright © %1$d</string>
    <string name="help_text">Help</string>
    <string name="check_update">Check update</string>
    <string name="about_follow_gongzhonghao">Follow WeChat Public Account</string>
    <string name="wechat_public_account_tips">The number has copied to clipboard, please search and follow it.</string>
    <string name="about_author">Author: weishu (Contact me)</string>
    <string name="about_page_website">Official website</string>
    <string name="privacy">Privacy</string>
    <string name="about_feedback_qq_title">QQ Group (Click to join)</string>
    <string name="about_author_github" translatable="false">Github(tiann)</string>
    <string name="about_author_zhihu">Zhihu(weishu)</string>
    <string name="about_author_xda" translatable="false">XDA(weishu)</string>
    <string name="about_author_coolapk">Coolapk(weishu)</string>
    <string name="about_author_email">Email me</string>
    <string name="about_author_contact">Contact me</string>
    <string name="about_telegram_group">Telegram group</string>
    <string name="i_know_it">I know it</string>
    <string name="progress_dialog_title">Please wait</string>
    <string name="donate_alipay">Alipay</string>
    <string name="donate_others">Other way</string>
    <string name="donate_choose_title">Choose donate way</string>
    <string name="prompt_alipay_not_found">Alipay not found.</string>
    <string name="donate_confirm">Donate</string>
    <string name="donate_never_show">Don\'t show again</string>
    <string name="app_guide_title">Important tips</string>
    <string name="about_feedback_title">TwoYi feedback</string>
    <string name="feedback_confirm">If you encountered some problems, please read the FAQ first! If you have some feature request, just contact me.</string>
    <string name="feedback_ok">Go to feedback</string>
    <string name="read_faq_text">Read FAQ</string>
    <string name="menu_not_show_system">Don\'t show system apps</string>
    <string name="menu_not_show_added">Don\'t show apps which has been added</string>
    <string name="select_app_button">Import App</string>
    <string name="create_app_no_apps">No apps to add, please give twoyi the necessary permission.</string>
    <string name="create_app_all_apps_added">All apps have been added :)</string>
    <string name="select_app_app_not_found">Can not found the specified package.</string>
    <string name="select_app_tips">Please select app you want to create</string>
    <string name="create_app_activity">Import App</string>
    <string name="check_file_invlid_apk">Can not parse the APK file!</string>
    <string name="check_file_create_self_tip">Boy, your idea is promising :)</string>
    <string name="import_app_from_file">Import app from APK</string>
    <string name="unsupported_for_32bit_app">32 bit app is not supported :(</string>
    <string name="please_install_one_by_one">Please install app one by one!</string>
    <string name="install_success">Install success!</string>
    <string name="install_failed">Install failed: %1$s</string>
    <string name="title_settings">Settings</string>
    <string name="settings_key_about">About</string>
    <string name="settings_key_import_app">Import App</string>
    <string name="settings_import_summary">Import apps from outside system</string>
    <string name="settings_key_donate">Donate</string>
    <string name="settings_donate_summary">Donate to make twoyi better :)</string>
    <string name="install_failed_reason">install failed: %1$s</string>
    <string name="look_it">Read it</string>
    <string name="tips_for_android12">You are running on Android 12, please follow the guide to use twoyi.</string>
    <string name="settings_key_sendlog">Send Log</string>
    <string name="settings_sendlog_summary">Share the exception log to developer</string>
    <string name="sdcard_of_twoyi">sdcard of twoyi</string>
    <string name="confirm_for_android12" >Make sure you\'ve followed the tutorial to set it up!!Otherwise the system may fail to boot!!!</string>
    <string name="i_confirm_it">I confirm it</string>
    <string name="menu_not_show_32bit">Don\'t show 32bit apps</string>
    <string name="settings_key_replace_rom">Replace ROM</string>
    <string name="settings_replace_rom_summary">Boot twoyi with your custom ROM</string>
    <string name="replace_rom_invalid">The ROM is not a valid ROM :(</string>
    <string name="replace_rom_confirm_title">ROM confirm</string>
    <string name="replace_rom_confirm_message">ROM author: %1$s\nROM version: %2$s\nROM desc: %3$s\n\n the ROM will be replaced in next boot.</string>
    <string name="settings_category_basic">Basic</string>
    <string name="settings_category_advanced">Advanced</string>
    <string name="settings_category_other">Other</string>
    <string name="settings_key_factory_reset">Factory Reset</string>
    <string name="settings_factory_reset_summary">Boot twoyi with official internal ROM (data will be kept)</string>
    <string name="settings_key_wipe_all_data">Wipe all data</string>
    <string name="settings_wipe_all_data_summary">All data in twoyi will be wiped</string>
    <string name="factory_reset_confirm_message">Factory reset will reset the ROM in twoyi to initial state, the third party ROM will be replaced, data will be kept, continue?</string>
    <string name="settings_key_manage_files">File Manager</string>
    <string name="settings_export_summary">Import/Export files in twoyi</string>
    <string name="settings_key_shutdown">Shutdown</string>
    <string name="settings_key_reboot">Reboot</string>
    <string name="replace_rom_unofficial_tips">Sorry, please edit the rom info and avoid using official author name :)</string>
    <string name="settings_category_server">Server</string>
    <string name="settings_key_server_address">Server Address</string>
    <string name="settings_server_address_summary">Set the server address and port (e.g., 192.168.1.100:8765)</string>
    <string name="settings_key_start_server">Start Local Server</string>
    <string name="settings_start_server_summary">Start a new container server with built-in binary</string>
    <string name="settings_key_connect_server">Connect to Server</string>
    <string name="settings_connect_server_summary">Connect to a running server at the configured address</string>
    <string name="settings_key_server_console">Server Console</string>
    <string name="settings_server_console_summary">View server output and logs</string>
    <string name="server_started">Server started successfully</string>
    <string name="server_start_failed">Failed to start server: %1$s</string>
    <string name="server_connecting">Connecting to server...</string>
    <string name="server_connected">Connected to server</string>
    <string name="server_connection_failed">Failed to connect to server: %1$s</string>
    <string name="server_address_dialog_title">Server Address</string>
    <string name="server_address_hint">address:port (e.g., 192.168.1.100:8765)</string>
    <string name="default_server_address" translatable="false">127.0.0.1:8765</string>
    <string name="settings_key_adb_address">ADB Address</string>
    <string name="settings_adb_address_summary">Address for scrcpy connections (default: 127.0.0.1:5556)</string>
    <string name="settings_key_connect_scrcpy">Connect via Scrcpy</string>
    <string name="settings_connect_scrcpy_summary">Connect to container display using scrcpy protocol</string>
    <string name="scrcpy_connecting">Connecting via scrcpy to %1$s:%2$d...</string>
    <string name="scrcpy_connected">Connected to: %1$s</string>
    <string name="scrcpy_disconnected">Disconnected from scrcpy</string>
    <string name="scrcpy_error">Scrcpy error: %1$s</string>
    <string name="adb_address_dialog_title">ADB Address</string>
    <string name="adb_address_hint">address:port (e.g., 127.0.0.1:5556)</string>
    <string name="invalid_address_format">Invalid address format. Use host:port (e.g., 127.0.0.1:5556)</string>
    <string name="press_back_again_to_exit">Press back again to return to settings</string>
    <string name="settings_category_local">Local Container</string>
    <string name="settings_key_start_local_legacy">Start Local (Legacy Mode)</string>
    <string name="settings_start_local_legacy_summary">Start the container locally with OpenGL graphics (requires gralloc ROM)</string>
    <string name="settings_category_debug">Debug</string>
    <string name="settings_legacy_mode_title">Legacy Mode</string>
    <string name="settings_legacy_mode_summary">Use OpenGL renderer (libOpenglRender.so) instead of fake gralloc + scrcpy</string>
    <string name="settings_verbose_debug_title">Verbose Debug Logging</string>
    <string name="settings_verbose_debug_summary">Enable extra verbose logging for debugging container issues</string>
    <string name="profile_management_title">Profile Management</string>
    <string name="settings_key_profiles">Manage Profiles</string>
    <string name="settings_profiles_summary">Create and manage multiple container profiles</string>
    <string name="add_profile">Add Profile</string>
    <string name="edit_profile">Edit</string>
    <string name="delete_profile">Delete</string>
    <string name="duplicate_profile">Duplicate</string>
    <string name="save_profile">Save</string>
    <string name="more_options">More options</string>
    <string name="create_profile_title">Create New Profile</string>
    <string name="edit_profile_title">Edit: %1$s</string>
    <string name="delete_profile_title">Delete Profile</string>
    <string name="delete_profile_confirm">Are you sure you want to delete the profile \"%1$s\"?</string>
    <string name="cannot_delete_last_profile">Cannot delete the last profile</string>
    <string name="profile_duplicated">Profile duplicated</string>
    <string name="profile_activated">Profile \"%1$s\" activated</string>
    <string name="profile_saved">Profile saved</string>
    <string name="profile_name_hint">Enter profile name</string>
    <string name="profile_name_label">Profile Name</string>
    <string name="profile_name_empty">Profile name cannot be empty</string>
    <string name="profile_name_exists">A profile with this name already exists</string>
    <string name="profile_mode_label">Container Mode</string>
    <string name="profile_mode_legacy">Legacy (OpenGL Graphics)</string>
    <string name="profile_mode_server">Server (Scrcpy Display)</string>
    <string name="profile_server_settings">Server Settings</string>
    <string name="profile_control_port">Control Port</string>
    <string name="profile_adb_port">ADB Port</string>
    <string name="profile_rootfs_path">Rootfs Path</string>
    <string name="profile_rootfs_default">Default: %1$s</string>
    <string name="profile_rootfs_initialized">✓ Rootfs initialized</string>
    <string name="profile_rootfs_not_initialized">⚠ Rootfs not initialized</string>
    <string name="profile_select_rootfs">Select Path</string>
    <string name="profile_clear_rootfs">Use Default</string>
    <string name="profile_options">Options</string>
    <string name="profile_verbose_debug">Verbose Debug Logging</string>
    <string name="profile_3rd_party_rom">Use 3rd Party ROM</string>
    <string name="profile_last_used">Last used: %1$s</string>
    <string name="invalid_port">Invalid port number (1-65535)</string>
</resources>