<?xml version="1.0" encoding="utf-8"?><!--
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_category_local">
        <Preference
            android:key="start_local_legacy"
            android:summary="@string/settings_start_local_legacy_summary"
            android:title="@string/settings_key_start_local_legacy" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_server">
        <Preference
            android:key="server_address"
            android:summary="@string/settings_server_address_summary"
            android:title="@string/settings_key_server_address" />

        <Preference
            android:key="adb_address"
            android:summary="@string/settings_adb_address_summary"
            android:title="@string/settings_key_adb_address" />

        <Preference
            android:key="start_server"
            android:summary="@string/settings_start_server_summary"
            android:title="@string/settings_key_start_server" />

        <Preference
            android:key="connect_server"
            android:summary="@string/settings_connect_server_summary"
            android:title="@string/settings_key_connect_server" />

        <Preference
            android:key="connect_scrcpy"
            android:summary="@string/settings_connect_scrcpy_summary"
            android:title="@string/settings_key_connect_scrcpy" />

        <Preference
            android:key="server_console"
            android:summary="@string/settings_server_console_summary"
            android:title="@string/settings_key_server_console" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_basic">
        <Preference
            android:key="@string/settings_key_import_app"
            android:summary="@string/settings_import_summary"
            android:title="@string/settings_key_import_app" />

        <Preference
            android:key="@string/settings_key_manage_files"
            android:summary="@string/settings_export_summary"
            android:title="@string/settings_key_manage_files" />

        <Preference
            android:key="@string/settings_key_shutdown"
            android:title="@string/settings_key_shutdown" />

        <Preference
            android:key="@string/settings_key_reboot"
            android:title="@string/settings_key_reboot" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings_category_advanced">


        <Preference
            android:key="@string/settings_key_replace_rom"
            android:summary="@string/settings_replace_rom_summary"
            android:title="@string/settings_key_replace_rom" />

        <Preference
            android:key="@string/settings_key_factory_reset"
            android:summary="@string/settings_factory_reset_summary"
            android:title="@string/settings_key_factory_reset" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_debug">
        <CheckBoxPreference
            android:key="verbose_debug"
            android:defaultValue="false"
            android:summary="@string/settings_verbose_debug_summary"
            android:title="@string/settings_verbose_debug_title" />

        <CheckBoxPreference
            android:key="fake_gralloc"
            android:defaultValue="true"
            android:summary="@string/settings_fake_gralloc_summary"
            android:title="@string/settings_fake_gralloc_title" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings_category_other">

        <Preference
            android:key="@string/settings_key_sendlog"
            android:summary="@string/settings_sendlog_summary"
            android:title="@string/settings_key_sendlog" />

        <Preference
            android:key="@string/settings_key_donate"
            android:summary="@string/settings_donate_summary"
            android:title="@string/settings_key_donate" />

        <Preference
            android:key="@string/settings_key_about"
            android:title="@string/settings_key_about" />
    </PreferenceCategory>

</PreferenceScreen>